--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,9 @@ $RECYCLE.BIN/
 Network Trash Folder
 Temporary Items
 .apdisk
+.Rproj.user
+
+#R related files
+.Rproj.user
+pcaCars.Rproj
+.Rhistory
